--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     color: white;
-    background: black;
+    background: ;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
 }
